# foxscript

./: CMakeLists.txt  README.md  TscSampler.hh  foxscript.cxx
.github/workflows/: ci_android.yml
android/: .gitignore  gradle.properties
android/app/: build.gradle
android/app/jni/: CMakeLists.txt  SDL2
android/app/jni/src/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/thewierdnut/foxscript/: FSActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
res/: CMakeLists.txt  res.hh
src/: Button.hh  Image.cxx  Image.hh  JobQueue.hh  MainWindow.cxx  MainWindow.hh  Text.cxx  Text.hh  VideoCapture.hh  VideoCaptureAndroid.cxx  VideoCaptureAndroid.hh  VideoCaptureApi.hh  VideoCaptureV4L2.cxx  VideoCaptureV4L2.hh  ZoomGesture.cxx  ZoomGesture.hh  picopng.h
